# thrive

./: Cargo.toml  README.md  fonts.css  index.html  justfile  package.json  styles.css  tailwind.config.js
app/src/: lib.rs  main.rs  web_view.rs
core/: Cargo.toml
core/src/: command.rs  emitter.rs  error.rs  event.rs  lib.rs  notifier.rs  sheet.rs  state.rs
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/core/: Cargo.toml
crates/core/benches/: js_benchmark.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
examples/: try_alcro.rs  try_web_view.rs
frontend/: .babelrc  .prettierignore  .prettierrc  index.html  package.json  tsconfig.json
frontend/schemas/: command.json  event.json
frontend/src/: .babelrc  index.html  index.tsx
frontend/src/components/: App.tsx  Cell.tsx  Grid.tsx  Sheet.tsx
frontend/src/hooks/: useHTMLElementEventListener.ts  useVisibleViewPort.ts
schemas/: command.json  event.json
server/: Cargo.toml
server/src/: lib.rs  main.rs  schemas.rs  server_address.rs  static_files.rs  ws.rs
src/: app.rs  js.rs  lib.rs  main.rs  prelude.rs  server.rs  utils.rs  web_view.rs
src-shared/: Cargo.toml
src-shared/src/: coordinate.rs  lib.rs  table_state.rs
src-shared/src/models/: coordinate.rs  mod.rs  table_state.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: compute.rs  main.rs
src-tauri/tests/: python.rs
src/components/: border.rs  cell.rs  code_bar.rs  column_labels.rs  mod.rs  row_labels.rs  table.rs  table_cell.rs
src/models/: focused_coordinate.rs  mod.rs  rectangle.rs  signal_pair.rs  table_dimensions.rs
src/tauri/: api.rs
