[package]
name = "thrive"
version = "0.1.0"
authors = ["Tobias Walle <git.tobias@walle.email>"]
edition = "2018"

[[bench]]
name = "js_benchmark"
harness = false

[dev-dependencies]
criterion = "0.3"
pretty_assertions = "0.7.2"
tokio-test = "0.4.1"

[dependencies]
serde_json = "1.0.64"
web-view = "0.7.3"
anyhow = "1.0.40"
thiserror = "1.0.24"
actix-web = "3"
actix-files = "0.5.0"
tokio = { version = "1.4", features = ["rt", "process", "macros", "rt-multi-thread", "time"] }
portpicker = "0.1.0"
futures = "0.3.14"
mime = "0.3.16"
