[package]
name = "thrive-core"
version = "0.1.0"
authors = ["Tobias Walle <git.tobias@walle.email>"]
edition = "2018"

[[bench]]
name = "js_benchmark"
harness = false

[dev-dependencies]
criterion = "0.3"
pretty_assertions = "0.7.2"
tokio-test = "0.4"

[dependencies]
tokio = { version = "1.4", features = ["rt", "process", "macros", "rt-multi-thread", "time"] }
thiserror = "1"
anyhow = "1"
derive_more = "0.99"
nanoid = "0.4"
serde = "1"
serde_json = "1"
schemars = "0.8"
color-backtrace = "0.5"
clap = "2"