[package]
name = "thrive-server"
version = "0.1.0"
authors = ["Tobias Walle <git.tobias@walle.email>"]
edition = "2018"

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1"
portpicker = "0.1"
include_dir = "0.6"
mime_guess = "2"
mime = "0.3"
