[package]
name = "thrive-server"
version = "0.1.0"
authors = ["Tobias Walle <git.tobias@walle.email>"]
edition = "2018"

[dependencies]
thrive-core = { path = "../core" }
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1"
portpicker = "0.1"
include_dir = "0.6"
mime_guess = "2"
mime = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
derive_more = "0.99"
serde_json = "1"
schemars = "0.8"