[package]
name = "thrive-app"
version = "0.1.0"
authors = ["Tobias Walle <git.tobias@walle.email>"]
edition = "2018"

[dependencies]
thrive-server = { path = "../server" }
portpicker = "0.1"
futures = "0.3"
tokio = { version = "1.4", features = ["rt", "rt-multi-thread", "macros"] }
thiserror = "1"
anyhow = "1"
web-view = "0.7"